--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -2,7 +2,9 @@ html, body {
   margin: 0;
   padding: 0;
 }
-
+body{
+  background-color: chartreuse;
+}
 .container {
   max-width: 1280px;
   margin: 0 auto;
